--- a/src/main/resources/templates/compute.mustache
+++ b/src/main/resources/templates/compute.mustache
@@ -1,4 +1,4 @@
-<title>My application</title>
+<title>My application deployed automatically</title>
 <h1>Hello, World!</h1>
 Result is {{result}}
 <form action="compute" method="post">
@@ -7,3 +7,4 @@ Result is {{result}}
 <br>
 <input type="submit">
 </form>
+
