--- a/src/main/resources/templates/compute.mustache
+++ b/src/main/resources/templates/compute.mustache
@@ -2,6 +2,8 @@
 <h1>Hello, World!</h1>
 Result is {{result}}
 <form action="compute" method="post">
+<h2>Birinci ve ikinci kutular integer array alıyor, üçüncü ve dördüncü kutular integer bir tamsayı alıyor.</h2>
+<h2>İlk array, üçüncü kutudaki tamsayıyı index olarak alıyor ve ikinci arrayin dördüncü kutudan aldığı indexi karşılaştırıp eşitlerse True değillerse False dönüyor. </h2>
 <textarea name="input1" rows="10" cols="30"></textarea>
 <textarea name="input2" rows="10" cols="30"></textarea>
 <textarea name="input3" rows="10" cols="30"></textarea>
